--- a/inc/assets/css/admin-style.css
+++ b/inc/assets/css/admin-style.css
@@ -36,8 +36,6 @@
 }
 
 
-
-
 /* Smart Blocks */
 .sb-wrap {
     font-size: 14px;
@@ -47,16 +45,15 @@
     box-sizing: border-box;
 }
 
-.sb-block-section-inner-wrap,
-.sb-extender-section-inner-wrap {
+.sb-block-section-inner-wrap{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
     grid-gap: 30px;
     grid-auto-rows: 80px;
+    padding: 30px;
 }
 
-.sb-block-section-inner-wrap .sb-block-wrap,
-.sb-extender-section-inner-wrap .sb-extender-wrap {
+.sb-block-section-inner-wrap .sb-block-wrap{
     position: relative;
     border: 1px solid #EEE;
     box-shadow: 4px 4px 15px rgb(0 0 0 / 10%);
@@ -92,15 +89,133 @@
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
 }
 
-.sb-block-wrap > span{
+.sb-block-wrap > span {
     display: inline-flex;
     gap: 14px;
     align-items: center;
 }
 
-.sb-block-wrap > span i{
+.sb-block-wrap > span i {
     font-size: 30px;
 }
+
+
+.sb-admin-header-section {
+    padding: 20px;
+    background: #FFF;
+    margin-left: -20px;
+    line-height: 1.3;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sb-admin-header-section h1 {
+    font-size: 18px;
+    margin: 0;
+}
+
+.sb-admin-header-section .sb-dcoumentation-link a {
+    background: #000;
+    padding: 10px 15px;
+    color: #FFF;
+    border-radius: 20px;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+.sb-admin-header-section h1 {
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    gap: 10px;
+    font-weight: bold;
+}
+
+.sb-admin-header-section h1 svg {
+    height: 16px;
+    width: 16px;
+}
+
+.sb-nav-tab-wrapper {
+    display: flex;
+    margin: 0 30px;
+}
+
+.sb-nav-tab-wrapper .sb-tab {
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 20px 40px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 10px 10px 0 0;
+    margin-right: 10px;
+    outline: none;
+    box-shadow: none;
+}
+
+.sb-nav-tab-wrapper .sb-tab i {
+    margin-right: 6px;
+}
+
+.sb-nav-tab-wrapper .sb-tab.nav-tab-active {
+    background: #FFF;
+    border-bottom: 0;
+    color: #000;
+}
+
+.sb-nav-tab-wrapper .sb-tab.nav-tab-active:focus,
+.sb-nav-tab-wrapper .sb-tab.nav-tab-active:focus:active,
+.sb-nav-tab-wrapper .sb-tab.nav-tab-active:hover {
+    border-bottom: 0;
+    background: #FFF;
+    color: #000;
+}
+
+.sb-tab-contents {
+    background: #FFF;
+    margin-right: 20px;
+    border-radius: 6px;
+    max-width: 1200px;
+}
+
+.sb-settings-field {
+    margin-bottom: 30px;
+}
+
+.sb-settings-field input[type=date],
+.sb-settings-field input[type=datetime-local],
+.sb-settings-field input[type=datetime],
+.sb-settings-field input[type=email],
+.sb-settings-field input[type=month],
+.sb-settings-field input[type=number],
+.sb-settings-field input[type=password],
+.sb-settings-field input[type=search],
+.sb-settings-field input[type=tel],
+.sb-settings-field input[type=text],
+.sb-settings-field input[type=time],
+.sb-settings-field input[type=url],
+.sb-settings-field input[type=week] {
+    width: 500px;
+    min-height: 38px;
+}
+
+.sb-settings-field input[type=number]{
+    width: 200px;
+}
+
+.sb-settings-field label {
+    margin-bottom: 6px;
+    display: block;
+}
+
+.sb-settings-field .sb-desc {
+    font-size: 13px;
+    font-style: italic;
+    color: #666;
+    margin-top: 5px;
+}
+
 
 .sb-checkbox {
     position: relative;
@@ -129,6 +244,7 @@
     transition: 0.4s;
     border: 1px solid #777;
     border-radius: 20px;
+    margin: 0;
 }
 
 .sb-checkbox label:after {
@@ -183,111 +299,6 @@
     border-color: #329043;
 }
 
-.sb-admin-header-section {
-    padding: 20px;
-    background: #FFF;
-    margin-left: -20px;
-    line-height: 1.3;
-    margin-bottom: 40px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.sb-admin-header-section h1,
-.sb-admin-header-section .sb-version {
-    font-size: 18px;
-    margin: 0;
-}
-
-.sb-admin-header-section h1{
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;
-    gap: 10px;
-    font-weight: bold;
-}
-
-.sb-admin-header-section h1 svg{
-    height: 16px;
-    width: 16px;
-}
-
-.sb-nav-tab-wrapper {
-    display: flex;
-    margin: 0 30px;
-}
-
-.sb-nav-tab-wrapper .sb-tab {
-    font-size: 14px;
-    text-transform: uppercase;
-    padding: 20px 40px;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 10px 10px 0 0;
-    margin-right: 10px;
-    outline: none;
-    box-shadow: none;
-}
-
-.sb-nav-tab-wrapper .sb-tab i {
-    margin-right: 6px;
-}
-
-.sb-nav-tab-wrapper .sb-tab.nav-tab-active {
-    background: #FFF;
-    border-bottom: 0;
-    color: #000;
-}
-
-.sb-nav-tab-wrapper .sb-tab.nav-tab-active:focus,
-.sb-nav-tab-wrapper .sb-tab.nav-tab-active:focus:active,
-.sb-nav-tab-wrapper .sb-tab.nav-tab-active:hover {
-    border-bottom: 0;
-    background: #FFF;
-    color: #000;
-}
-
-.sb-tab-contents {
-    background: #FFF;
-    padding: 30px 30px 0;
-    margin-right: 20px;
-    border-radius: 6px;
-    max-width: 1200px;
-}
-
-.sb-settings-field {
-    margin-bottom: 30px;
-}
-
-.sb-settings-field input[type=date],
-.sb-settings-field input[type=datetime-local],
-.sb-settings-field input[type=datetime],
-.sb-settings-field input[type=email],
-.sb-settings-field input[type=month],
-.sb-settings-field input[type=number],
-.sb-settings-field input[type=password],
-.sb-settings-field input[type=search],
-.sb-settings-field input[type=tel],
-.sb-settings-field input[type=text],
-.sb-settings-field input[type=time],
-.sb-settings-field input[type=url],
-.sb-settings-field input[type=week] {
-    width: 500px;
-    min-height: 38px;
-}
-
-.sb-settings-field label {
-    margin-bottom: 6px;
-    display: block;
-}
-
-.sb-settings-field .sb-desc{
-    font-size: 13px;
-    font-style: italic;
-    color: #666;
-    margin-top: 5px;
-}
-
 .sb-save-button {
     display: flex;
     align-items: center;
@@ -301,15 +312,13 @@
     cursor: pointer;
 }
 
-.sb-block-action-buttons,
-.sb-extender-action-buttons {
+.sb-block-action-buttons{
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 20px;
+    padding: 30px 30px 0;
 }
 
-.sb-block-action-buttons .sb-block-action-btn,
-.sb-extender-action-buttons .sb-extender-action-btn {
+.sb-block-action-buttons .sb-block-action-btn{
     background: #000;
     padding: 8px 15px;
     margin-left: 10px;
@@ -320,22 +329,20 @@
     cursor: pointer;
 }
 
-.sb-block-action-buttons .sb-block-action-btn i,
-.sb-extender-action-buttons .sb-extender-action-btn i {
+.sb-block-action-buttons .sb-block-action-btn i{
     margin-right: 6px;
     font-weight: bold;
 }
 
 .sb-save-button-wrap {
-    margin-top: 50px;
     padding: 30px;
     border-top: 1px solid #EEE;
-    margin-left: -30px;
-    margin-right: -30px;
     position: sticky;
     bottom: 0;
     background: #FFF;
     z-index: 9;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .sb-admin-notificn {
@@ -414,80 +421,51 @@
     }
 }
 
-
-
-
-
-
-
+#sb-about-section-content{
+    padding: 30px;
+}
 
 .sb-htab-container {
-  display: flex;
-  width: 100%;
-  background: #fff;
-  border-radius: 12px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+    display: flex;
+    width: 100%;
 }
 
 .sb-htabs {
-  width: 180px;
-  background: #f8f9fa;
-  display: flex;
-  flex-direction: column;
-  border-right: 1px solid #ddd;
-  flex-shrink: 0;
+    width: 180px;
+    flex: 180px;
+    background: #f8f9fa;
+    display: flex;
+    flex-direction: column;
 }
 
 .sb-htab-content {
-  flex-grow: 1;
-  padding: 30px;
-  overflow-y: auto;
-  animation: fadeIn 0.4s ease-in-out;
+    width: calc(100% - 180px);
+    flex: calc(100% - 180px);
+    padding: 30px;
 }
-
-
-
 
 .sb-htab {
-  padding: 20px;
-  cursor: pointer;
-  transition: background 0.3s, color 0.3s;
-  position: relative;
-}
-
-.sb-htab:hover {
-  background: #e9ecef;
+    padding: 20px;
+    cursor: pointer;
+    transition: background 0.3s, color 0.3s;
+    position: relative;
 }
 
 .sb-htab.sb-active {
-  background: #ffffff;
-  color: #007bff;
-  font-weight: 600;
-}
-
-.sb-htab.sb-active::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 4px;
-  height: 100%;
-  background-color: #007bff;
+    background: #ffffff;
+    color: #2271b1;
+    font-weight: 600;
 }
 
 .sb-htab-panel {
-  display: none;
+    display: none;
 }
 
 .sb-htab-panel.sb-active {
-  display: block;
+    display: block;
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
+
 
 
 .sb-gallery_preview,
